[workspace]
members = [
    "host",
    "plugins/ecs-core",
    "plugins/my-game"
]
resolver = "2"

# --- OPTIMIZATION PROFILE ---
# This applies to both the Host and the WASM plugins when you run with --release
[profile.release]
panic = "abort"        # Removes stack unwinding bloat (Critical for small WASM)
opt-level = 3          # Maximize Runtime Speed (Use "s" if you prefer smaller size)
