[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "21.0.2"
anyhow = "1.0"
# We need this for the safe shared-heap management
buddy-alloc = "0.4" 
libc = "0.2" # Often needed for raw pointer casts
wasmparser = "0.243.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
bytemuck = "1.13"
ecs-protocol = { path = "../crates/ecs-protocol" }
grid-protocol = { path = "../crates/grid-protocol" }
