[package]
name = "tasksapp_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
tasksapp_net = { path = "../../net-crates/tasksapp-net" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# --- THE FIX ---
[profile.release]
lto = true       
codegen-units = 1 
opt-level = "z"   
