[package]
name = "ecs-core" # Internal crate name used in code
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compiles to .wasm

[dependencies]
tasksapp_allocator = { path = "../../crates/allocator" }
ecs-protocol = { path = "../../crates/ecs-protocol" }
# once_cell is useful for the static global WORLD mutex
rustc-hash = "1.1"
hecs = "0.10"
once_cell = "1.19"
